[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbox"
version = "0.8.1"
description = "Integrated intelligence stack: Screen Ghost + Axiom-KG + DIND + Attention + Sessions + PLTR Analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jonathan Sandhu", email = "jonathan@sandhuconsulting.com"}
]
keywords = [
    "knowledge-graph",
    "semantic-coordinates",
    "tension-detection",
    "attention-geometry",
    "field-zero",
    "pltr",
    "xbrl",
    "intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
charts = ["matplotlib>=3.5"]
all = ["matplotlib>=3.5"]
dev = ["pytest>=7.0"]

[project.scripts]
ghostbox-pltr = "ghostbox_pltr.analyzer:main"
ghostbox-demo = "ghostbox.integration:demo_integration"

[tool.setuptools.packages.find]
where = ["src"]
include = ["axiom*", "screen_ghost*", "dind_stack*", "ghostbox*", "ghostbox_pltr*"]

[tool.setuptools.package-dir]
"" = "src"
